--- a/blog/package.json
+++ b/blog/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "hexo": "^3.2.2",
+    "hexo-admin": "^2.2.1",
     "hexo-deployer-ftpsync": "^0.1.1",
     "hexo-deployer-git": "0.0.4",
     "hexo-deployer-heroku": "0.0.3",
@@ -15,6 +16,7 @@
     "hexo-generator-category": "^0.1.2",
     "hexo-generator-feed": "~1.0.3",
     "hexo-generator-index": "^0.1.2",
+    "hexo-generator-search": "^2.1.1",
     "hexo-generator-sitemap": "~1.0.1",
     "hexo-generator-tag": "^0.1.1",
     "hexo-migrator-rss": "~0.1.2",
