fix(travis): travis ci coding commit push

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ before_script:
 - git config --global user.name "barretlee"
 - git config --global user.email "barret.china@gmail.com"
 - sed -i'' "s~git@github.com:barretlee/blog.git~https://${GITHUB_TOKEN}:x-oauth-basic@github.com/barretlee/blog.git~" _config.yml
-- sed -i'' "s~git@e.coding.net:barretlee/blog.git~https://barretlee:${CODING_TOKEN}@e.coding.net/barretlee/blog.git~" _config.yml
+- sed -i'' "s~git@e.coding.net:barretlee/blog.git~https://${CODING_USERNAME}:${CODING_TOKEN}@e.coding.net/barretlee/blog.git~" _config.yml
 script:
 - hexo clean
 - hexo generate
