--- a/.travis.yml
+++ b/.travis.yml
@@ -30,5 +30,5 @@ script:
 - hexo generate
 after_success:
 - hexo deploy
-- git remote add coding https://barretlee:${CODING_TOKEN}@barretlee.coding.net/barretlee/blog.git
+- git remote add coding https://${CODING_USERNAME}:${CODING_TOKEN}@barretlee.coding.net/barretlee/blog.git
 - git push coding master
