--- a/package.json
+++ b/package.json
@@ -20,15 +20,15 @@
   "dependencies": {},
   "devDependencies": {
     "@commitlint/cli": "^8.2.0",
-    "@commitlint/config-conventional": "^8.2.0"
+    "@commitlint/config-conventional": "^8.2.0",
+    "husky": "^3.0.9"
   },
   "bugs": {
     "url": "https://github.com/barretlee/blog/issues"
   },
   "husky": {
     "hooks": {
-      "commit-msg": "node @commitlint/cli/lib/cli.js -E HUSKY_GIT_PARAMS",
-      "pre-commit": "lint-staged"
+      "commitmsg": "node @commitlint/cli/lib/cli.js -E GIT_PARAMS"
     }
   },
   "homepage": "https://github.com/barretlee/blog#readme"
