chore(blog): 清理无关项

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blogsys",
+  "name": "blog-sys",
   "description": "Blog System Designed by Barret Lee.",
   "version": "1.0.0",
   "scripts": {
