chore(blog): 清理无关项

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ git:
 cache:
   directories:
   - blog/node_modules
+  - node_modules
 branches:
   only:
   - master
@@ -17,6 +18,7 @@ before_install:
 - npm install -g hexo-cli
 # - sed -i 's/git@github.com:/https:\/\/github.com\//' .gitmodules
 # - git submodule update --init --recursive
+- npm install
 - cd blog
 install:
 - npm install
