--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "description": "Blog System Designed by Barret Lee.",
   "version": "1.0.0",
   "scripts": {
-    "resolve-images": "node scripts/resolve-images.js"
+    "resolve-images": "node scripts/resolve-images.js",
+    "resize-images": "sips --resampleWidth 1200 blog/src/blogimgs/**/*.{jpg,png,gif}",
+    "commitlint": "node ./node_modules/@commitlint/cli/lib/cli.js -E HUSKY_GIT_PARAMS",
+    "images-task": "npm run resolve-images; npm run resize-images"
   },
   "repository": {
     "type": "git",
@@ -27,8 +30,8 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run resolve-images",
-      "commit-msg": "node ./node_modules/@commitlint/cli/lib/cli.js -E HUSKY_GIT_PARAMS"
+      "pre-commit": "npm run images-task",
+      "commit-msg": "npm run commitlint"
     }
   },
   "homepage": "https://github.com/barretlee/blog#readme"
