chore(blog): 清理无关项

--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -128,9 +128,9 @@ image_minifier:
   interlaced: false
   multipass: false
   optimizationLevel: 4
-  pngquant: true
+  pngquant: false
   progressive: false
-  silent: true
+  silent: false
 
 # for img lazyload
 lazyload:
