chore(styles): 样式增强,功能补充

--- a/blog/package.json
+++ b/blog/package.json
@@ -20,7 +20,7 @@
     "hexo-generator-search": "^2.1.1",
     "hexo-generator-sitemap": "~1.0.1",
     "hexo-generator-tag": "^0.1.1",
-    "hexo-lazyload-image2": "*",
+    "hexo-lazyload-image-enhance": "*",
     "hexo-migrator-rss": "~0.1.2",
     "hexo-renderer-ejs": "^0.1.0",
     "hexo-renderer-marked": "^0.2.4",
