feat(new post): 带你开发和调试 VS Code 源码

--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -122,7 +122,7 @@ js_minifier:
   exclude: 
     - '*.min.js'
 image_minifier:
-  enable: true
+  enable: false
   interlaced: false
   multipass: false
   optimizationLevel: 3
