--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -122,7 +122,7 @@ js_minifier:
   exclude: 
     - '*.min.js'
 image_minifier:
-  enable: false
+  enable: true
   interlaced: false
   multipass: false
   optimizationLevel: 3
