--- a/blog/themes/hexo-theme-moustache/_config.yml
+++ b/blog/themes/hexo-theme-moustache/_config.yml
@@ -1,4 +1,4 @@
-author: 小胡子哥 # Barret Lee
+author: Barret李靖
 author_en: Barret Lee
 
 source_edit: https://github.com/barretlee/blog/edit/master/blog/src/_posts/
