--- a/blog/src/_data/text.yml
+++ b/blog/src/_data/text.yml
@@ -1,5 +1,5 @@
 # 留言平台
-message: "<p>Hi，大家好，我是小胡子哥，</p>\
+message: "<p>Hi，大家好，我是李靖，网名小胡子哥（Barret Lee），</p>\
           <p>如果你有什么问题，可以在这里提出来，欢迎交流~</p>\
           <p>P.S: 淘宝技术部招人，如果你感兴趣，可以把简历发到 barret.china(at)gmail.com .</p>\
           <p>:-）</p>"
