--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -5,8 +5,8 @@
 # Site
 title: 小胡子哥的个人网站
 title_en: Barret Lee's personal website
-subtitle: For Future, For Freedom.
-description: 想法，随笔，思考，感叹，瞬间，笔记...
+subtitle: 一个有趣的灵魂
+description: 一个有趣的灵魂 —— 想法，随笔，思考，感叹，瞬间，笔记...
 author: Barret李靖
 language: zh-cn
 timezone: Asia/Shanghai
