--- a/blog/package.json
+++ b/blog/package.json
@@ -3,29 +3,31 @@
   "version": "0.0.1",
   "private": true,
   "hexo": {
-    "version": "3.9.0"
+    "version": "7.0.0-rc1"
+  },
+  "scripts": {
+    "deploy": "hexo deploy"
   },
   "dependencies": {
-    "hexo": "^3.3.7",
-    "hexo-admin2": "*",
-    "hexo-all-minifier": "^0.5.2",
-    "hexo-deployer-ftpsync": "^0.1.1",
-    "hexo-deployer-git": "0.0.4",
-    "hexo-deployer-heroku": "0.0.3",
-    "hexo-deployer-rsync": "~0.1.1",
-    "hexo-generator-archive": "^0.1.2",
-    "hexo-generator-category": "^0.1.2",
-    "hexo-generator-feed2": "*",
-    "hexo-generator-index": "^0.1.2",
-    "hexo-generator-search": "^2.1.1",
-    "hexo-generator-sitemap": "~1.0.1",
-    "hexo-generator-tag": "^0.1.1",
-    "hexo-lazyload-image-enhance": "*",
-    "hexo-migrator-rss": "~0.1.2",
-    "hexo-renderer-ejs": "^0.1.0",
-    "hexo-renderer-marked": "^0.2.4",
-    "hexo-renderer-stylus": "^0.3.0",
-    "hexo-server": "^0.1.3",
+    "hexo": "^7.0.0-rc1",
+    "hexo-admin2": "^2.2.1",
+    "hexo-all-minifier": "^0.5.7",
+    "hexo-deployer-git": "^4.0.0",
+    "hexo-deployer-rsync": "^2.0.0",
+    "hexo-generator-archive": "^2.0.0",
+    "hexo-generator-baidu-sitemap": "^0.1.9",
+    "hexo-generator-category": "^2.0.0",
+    "hexo-generator-feed2": "^1.0.5",
+    "hexo-generator-index": "^3.0.0",
+    "hexo-generator-search": "^2.4.3",
+    "hexo-generator-sitemap": "^3.0.1",
+    "hexo-generator-tag": "^2.0.0",
+    "hexo-lazyload-image-enhance": "1.0.1",
+    "hexo-migrator-rss": "~1.1.0",
+    "hexo-renderer-ejs": "^2.0.0",
+    "hexo-renderer-marked": "^6.0.0",
+    "hexo-renderer-stylus": "^3.0.0",
+    "hexo-server": "^3.0.0",
     "hexo-tag-imgurl": "^0.0.3"
   }
 }
