--- a/blog/src/_data/text.yml
+++ b/blog/src/_data/text.yml
@@ -1,22 +1,10 @@
 # 留言平台
 message: "<p>Hi，大家好，我是李靖，网名小胡子哥（Barret Lee），</p>\
-          <p>如果你有什么问题，可以在这里提出来，欢迎交流~</p>\
-          <p>P.S: 淘宝技术部招人，如果你感兴趣，可以把简历发到 barret.china(at)gmail.com .</p>\
-          <p>:-）</p>"
+          <p>欢迎交流~</p>"
 
-# 博客公告：小胡子哥是个大帅哥，你难道不承认？<a href='javascript:void(0);' class='close'>关闭</a>
-# 淘宝网2016实习生招聘答疑，可以 <a href="http://www.barretlee.com/recruitment/">戳我</a>  <a href='javascript:void(0);' class='close'>关闭</a>
-# <style>.rainbow font{display:inline-block;margin-right:10px;}</style><font style='font-size:18px;color:#4285F4;'>淘宝前端</font><font style='font-size:12px;color:#EA4335;'>招人！</font><font style='font-size:22px;color:#FBBC05;'>很着急</font><font style='font-size:14px;color:#4285F4;'>P6</font><font style='font-size:18px;color:#34A853;'>来不来？</font><a href="/recruitment/waiting-for-u/" style="text-decoration:underline;color:#EA4335;">戳我 »</a><a href='javascript:void(0);' class='close' style="display:none;">关闭</a>
-# 戳→ <a href="https://www.v2ex.com/t/339189" target="_blank" style="color:#ff5900;border-bottom:1px solid;">「前端进阶」小密圈限时折扣，来一波推广</a><a href='javascript:void(0);' class='close'>关闭</a>
 notice:
 
 # 友情链接
-#"<p><strong>友链交换：</strong> 本博客只接受同行或者朋友的博客链接交换，在您的博客中添加 <b>小胡子哥</b> 和 <b>http://www.barretlee.com</b> 的链接后，在下方留言，格式如下:<p>\
-              #<ol><li>网站名称：小胡子哥</li>\
-              #<li>网站地址：http://www.barretlee.com</li>\
-              #<li>网站介绍：小胡子哥的个人网站</li>\
-              #<li>头像随意：<a href='http://www.barretlee.com/blogimgs/app-icon.png' target='_blank'><img src='http://www.barretlee.com/blogimgs/app-icon.png' style='height:40px;vertical-align:middle;'></a></li></ol>\
-              #<p>欢迎交流~（<a href='/about/#contact'>我的联系方式</a>）</p>"
 friends_Info: "<p>欢迎交流~（<a href='/about/#contact'>我的联系方式</a>）</p>"
 
 friends:
@@ -29,13 +17,9 @@ friends:
   次碳酸钴:
     深度交流的一个好朋友: http://web-tinker.com
   屈屈:
-    好吧，蛐蛐同学: http://imququ.com
+    蛐蛐同学: http://imququ.com
   阮一峰:
-    阮老师,哈哈,第一次设计博客就是抄的你的样式: http://www.ruanyifeng.com
-  安记:
-    阿安同学: http://annn.me
-  卜卜口:
-    二次元化身: http://mouto.org/
+    阮老师: http://www.ruanyifeng.com
 
 # 标准规范副本
 st:
