feat(actions): close html minify

--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -118,11 +118,11 @@ js_minifier:
   exclude: 
     - '*.min.js'
 image_minifier:
-  enable: true
+  enable: false
   interlaced: false
   multipass: false
   optimizationLevel: 3
-  pngquant: true
+  pngquant: false
   progressive: false
   silent: false
 
