--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,9 +42,9 @@ jobs:
       - name: Install dependencies
         run: |
           npm install
-        working-directory: blog/
+        working-directory: blog
 
       - name: Deploy hexo
         run: |
           npm run deploy
-        working-directory: blog/
+        working-directory: blog
