--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,6 +41,7 @@ jobs:
           ssh-keyscan github.com >> ~/.ssh/known_hosts
           git config --global user.name $GIT_USER
           git config --global user.email $GIT_EMAIL
+          echo $HEXO_DEPLOY_PRI
 
       - name: Start ssh-agent
         uses: webfactory/ssh-agent@v0.5.4
