feat(actions): deploy key

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,17 +36,12 @@ jobs:
         run: |
           sudo timedatectl set-timezone "Asia/Shanghai"
           mkdir -p ~/.ssh/
-          echo "$HEXO_DEPLOY_PRI" > ~/.ssh/github_deploy
-          chmod 600 ~/.ssh/github_deploy
+          echo "$HEXO_DEPLOY_PRI" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
           ssh-keyscan github.com >> ~/.ssh/known_hosts
           git config --global user.name $GIT_USER
           git config --global user.email $GIT_EMAIL
           echo $HEXO_DEPLOY_PRI
-
-      - name: Start ssh-agent
-        uses: webfactory/ssh-agent@v0.5.4
-        with:
-          ssh-private-key: ${{ secrets.HEXO_DEPLOY_PRI }}
 
       - name: Install dependencies
         run: |
