--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,10 +42,8 @@ jobs:
           git config --global user.name $GIT_USER
           git config --global user.email $GIT_EMAIL
 
-      - name: Add ssh-key
+      - name: Test connection
         run: |
-          ssh-agent bash
-          ssh-add ~/.ssh/*
           ssh -T git@github.com
           
       - name: Install dependencies
