feat(actions): deploy key

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,9 +42,9 @@ jobs:
           git config --global user.name $GIT_USER
           git config --global user.email $GIT_EMAIL
 
-      - name: Test connection
-        run: |
-          ssh -vvvT git@github.com
+      # - name: Test connection
+      #   run: |
+      #     ssh -vvvT git@github.com
           
       - name: Install dependencies
         run: |
