--- a/blog/themes/hexo-theme-moustache/_config.yml
+++ b/blog/themes/hexo-theme-moustache/_config.yml
@@ -1,6 +1,7 @@
 author: Barret李靖
 author_en: Barret Lee
 
+source_tree: https://github.com/barretlee/blog/tree/master/blog/src/_posts/
 source_edit: https://github.com/barretlee/blog/edit/master/blog/src/_posts/
 source_new: https://github.com/barretlee/blog/new/master/blog/src/_posts
 
