--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,5 +53,6 @@ jobs:
 
       - name: Deploy hexo
         run: |
+          sed -i '' '123s/false/true/' blog/_config.yml;
           npm run deploy
         working-directory: blog
