--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,13 +23,20 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      
+      - name: restore node_modules
+        uses: actions/cache@v2
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
 
       - name: Use Node.js ${{ matrix.node_version }}
         uses: actions/setup-node@v3.4.1
         with:
           node-version: ${{ matrix.node_version }}
-          # 生成 package-lock.json 文件失败，cache 配置无效
-          # cache: 'npm'
+          cache: 'npm'
 
       - name: Configuration environment
         env:
@@ -48,8 +55,8 @@ jobs:
       #     ssh -vvvT git@github.com
           
       - name: Install dependencies
-        run: |
-          npm install
+        if: steps.restore.outputs.cache-hit != 'true'
+        run: npm install
         working-directory: blog
 
       - name: Deploy hexo
@@ -58,3 +65,9 @@ jobs:
         working-directory: blog
         # 插件问题，execSync 操作导致输出到 stdout 的内容太多，溢出报错
         # node -e "const fs = require('fs'); let content = fs.readFileSync('_config.yml').toString().replace(/image_minifier[\s\S]+?enable: false/gmi, 'image_minifier:\n  enable: true'); fs.writeFileSync('_config.yml', content);"
+      
+      - name: save node_modules
+        uses: actions/cache@v2
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package.json') }}
