--- a/blog/src/_data/categories.yml
+++ b/blog/src/_data/categories.yml
@@ -1,12 +1,25 @@
 list:
-	- 网络技术
 	- JavaScript
-	- 网络安全
-	- Linux
 	- 杂物间
 	- 剪贴板
-	- 旅行
+	- 网络交互
 	- 观点和感想
+	- 前端杂烩
+	- 后端杂烩
+	- Linux
+	- 工具
+	- 翻译
+	- 网络安全
 	- 笔记本
-
-
+	- 在路上
+	- 网页无障碍
+	- 苹果
+	- 网络技术
+	- 随笔
+	- 无线技术
+	- 算法
+	- 前端杂谈
+	- 观点和想法
+	- 硬件开发
+	- 记事本
+	- 运维技术
