fix: cdn address

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -61,7 +61,7 @@ jobs:
 
       - name: Deploy hexo
         run: |
-          npm run deploy
+          NODE_ENV=ci npm run deploy
         working-directory: blog
         # 插件问题，execSync 操作导致输出到 stdout 的内容太多，溢出报错
         # node -e "const fs = require('fs'); let content = fs.readFileSync('_config.yml').toString().replace(/image_minifier[\s\S]+?enable: false/gmi, 'image_minifier:\n  enable: true'); fs.writeFileSync('_config.yml', content);"
