fix: update about me

--- a/blog/themes/hexo-theme-moustache/_config.yml
+++ b/blog/themes/hexo-theme-moustache/_config.yml
@@ -31,6 +31,7 @@ social:
   weibo: http://weibo.com/173248656
   zhihu: http://www.zhihu.com/people/barretlee
   douban: http://www.douban.com/people/hustskyking/
+  jike: https://web.okjike.com/u/83F8C091-4C46-43B7-B7AC-B90CD72255E7
   mail: barret.china@gmail.com
   facebook: barret.china
   google: https://plus.google.com/112634278852964994392?hl=zh-cn
